ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyber-knights-ingress
spec:
  rules:
  - host: my-nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cyber-knights-service
            port:
              number: 80
